force-app/main/default/objects/zkups__CustomAddressSourcePackage__c/zkups__CustomAddressSourcePackage__c.object-meta.xml
<CustomObject>
    <label>UPS Custom Address Source Package</label>
    <nameField>
        <displayFormat>CASP-{0000}</displayFormat>
        <label>Custom Address Source Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Custom Address Source Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>