force-app/main/default/objects/zkups__CustomAddressSourcePackage__c/fields/zkups__CODCashierCheckMoneyOrderOnlyField__c.field-meta.xml
<CustomField>
    <fullName>zkups__CODCashierCheckMoneyOrderOnlyField__c</fullName>
    <label>COD Cashier Check Money Order Only Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>