force-app/main/default/objects/zkups__CustomAddressSourcePackage__c/fields/zkups__DeliverWithoutSignatureField__c.field-meta.xml
<CustomField>
    <fullName>zkups__DeliverWithoutSignatureField__c</fullName>
    <label>Deliver Without Signature Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>