force-app/main/default/objects/zkups__CustomAddressSourcePackage__c/fields/zkups__WeightField__c.field-meta.xml
<CustomField>
    <fullName>zkups__WeightField__c</fullName>
    <label>Weight Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>