force-app/main/default/objects/zkups__CustomAddressSourcePackage__c/fields/zkups__WidthField__c.field-meta.xml
<CustomField>
    <fullName>zkups__WidthField__c</fullName>
    <label>Width Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>